frontend is ok. In this point will start code the server

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -19,37 +19,71 @@
 		<nav class="header-menu-navbar">
 			<ul class="header-menu-list" id="navbarMenu">
 				<li class="header-menu-list-item" id="a-view-1">
-					<a>view-1</a>
+					<a>home</a>
 				</li>
 				<li class="header-menu-list-item" id="a-view-2">
-					<a>view-2</a>
+					<a>abilities</a>
 				</li>
 				<li class="header-menu-list-item" id="a-view-3">
-					<a>view-3</a>
+					<a>missions</a>
 				</li>
 				<li class="header-menu-list-item" id="a-view-4">
-					<a>view-4</a>
+					<a>Get Started</a>
 				</li>
 			</ul>
 		</nav>
 	</header>
 	<section>
-		<div class="view" id="view-0"></div>
 		<div class="view" id="view-1">
-			View 1
+			<div class="text">Your customizable<br>assistant<br>in the cloud</div>
+			<div class="flex-content">
+				<div class="btn btn-primary-2"><a>Get Started</a></div>
+			</div>
 		</div>
 		<div class="view" id="view-2">
-			View 2
+			<div class="flex-content">
+				<div class="text" id="text-1">add new abilities<br>to your assistant</div>
+				<div class="text" id="text-2">Customize your assistant<br>adding specific skills</div>
+			</div>
 		</div>
 		<div class="view" id="view-3">
-			View 3
+			<div class="flex-content">
+				<div class="flex-content">
+					<div class="text" id="text-1">also do missions</div>
+					<div class="text" id="text-2">your assistant don´t<br>only do tasks</div>
+				</div>
+				<picture>
+					<img src="./img/slice3-img-mobile.png" style="max-width: 100%; height: auto;">
+				</picture>
+			</div>
 		</div>
 		<div class="view" id="view-4">
-			View 4
+			<div class="text" id="text-1">Download 2cmind<br>for free</div>
+			<div class="flex-content">
+				<div class="flex-content">
+					<div class="btn btn-download">
+						<a><img src="./img/apple_store.png" style="max-width: 200px; height: auto;"></a>
+					</div>
+					<br>
+					<div class="btn btn-download">
+						<a><img src="./img/google_play.png" style="max-width: 200px; height: auto;"></a>
+					</div>
+				</div>
+				<picture>
+				</picture>
+			</div>
 		</div>
 	</section>
 	<footer>
-		footer template-landing-page
+		<div class="flex-content">
+		<a href="https://www.facebook.com/2cmind/" target="blank">
+			<img src="./img/facebook.png" style="width: 50px;height: 50px;">
+		</a>
+		<a href="https://twitter.com/2cmind" target="blank">
+			<img src="./img/twitter.png" style="width: 50px;height: 50px;">
+		</a>
+		</div>
+		<div class="author">brucegroverlee.com</div>
 	</footer>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
