Session api was made

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -28,7 +28,7 @@
 					<a>missions</a>
 				</li>
 				<li class="header-menu-list-item" id="a-view-4">
-					<a>Get Started</a>
+					<a>Download</a>
 				</li>
 			</ul>
 		</nav>
@@ -83,7 +83,7 @@
 			<img src="./img/twitter.png" style="width: 50px;height: 50px;">
 		</a>
 		</div>
-		<div class="author">brucegroverlee.com</div>
+		<div class="author"><a href="http://brucegroverlee.com" target="blank">brucegroverlee.com</a></div>
 	</footer>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
